[package]
name = "imgbb"
description = "ImgBB API wrapper for Rust"
version = "1.2.2"
edition = "2021"
authors = ["pullinglazy"]
readme = "README.md"
license = "MIT"
keywords = ["imgbb", "image", "hosting", "api"]
repository = "https://github.com/pulllazy/imgbb-rs"

[dependencies]
base64 = "0.21.2"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"

[dev-dependencies]
clap = { version = "4.3.9", features = ["derive"] }
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
